language-server/src/tests/snapshots/gleam_language_server__tests__completion__labelled_arguments_after_label.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Float)\n}\n\npub fn main() {\n  Wibble(wibble: w)\n}\n"
---
pub type Wibble {
  Wibble(wibble: Int, wobble: Float)
}

pub fn main() {
  Wibble(wibble: w|)
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [6:17-6:17]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
Wibble
  kind:   Constructor
  detail: fn(Int, Float) -> Wibble
  sort:   2_Wibble
  desc:   app
  edits:
    [6:17-6:17]: "Wibble"
main
  kind:   Function
  detail: fn() -> Wibble
  sort:   2_main
  desc:   app
  edits:
    [6:17-6:17]: "main"
