language-server/src/tests/snapshots/gleam_language_server__tests__completion__labelled_arguments_from_different_module.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.divide(10, b)\n}\n"
---
import wibble

pub fn main() {
  wibble.divide(10, b|)
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [4:20-4:20]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
by:
  kind:   Field
  detail: Int
  sort:   0_by:
main
  kind:   Function
  detail: fn() -> Int
  sort:   2_main
  desc:   app
  edits:
    [4:20-4:20]: "main"
wibble.divide
  kind:   Function
  detail: fn(Int, Int) -> Int
  sort:   3_wibble.divide
  desc:   app
  edits:
    [4:20-4:20]: "wibble.divide"
