language-server/src/tests/snapshots/gleam_language_server__tests__completion__labelled_arguments_function_call.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn divide(x: Int, by y: Int) { x / y }\n\npub fn main() {\n  divide(10, b)\n}\n"
---
pub fn divide(x: Int, by y: Int) { x / y }

pub fn main() {
  divide(10, b|)
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [4:13-4:13]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
by:
  kind:   Field
  detail: Int
  sort:   0_by:
divide
  kind:   Function
  detail: fn(Int, Int) -> Int
  sort:   2_divide
  desc:   app
  edits:
    [4:13-4:13]: "divide"
main
  kind:   Function
  detail: fn() -> Int
  sort:   2_main
  desc:   app
  edits:
    [4:13-4:13]: "main"
