language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_public_enum.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Direction {\n  Left\n  Right\n}\n"
---
|
pub type Direction {
  Left
  Right
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Left
  kind:   EnumMember
  detail: Direction
  sort:   2_Left
  desc:   app
  edits:
    [1:0-1:0]: "Left"
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
Right
  kind:   EnumMember
  detail: Direction
  sort:   2_Right
  desc:   app
  edits:
    [1:0-1:0]: "Right"
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
