language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_public_function_with_documentation.snap
---
source: language-server/src/tests/completion.rs
expression: "\n/// Hello\npub fn main() {\n  0\n}"
---
|
/// Hello
pub fn main() {
  0
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn() -> Int
  sort:   2_main
  desc:   app
  docs:   " Hello\n"
  edits:
    [1:0-1:0]: "main"
