language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_public_record_with_documentation.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Box {\n  Box(Int, Int, Float)\n}\n"
---
|
pub type Box {
  Box(Int, Int, Float)
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [1:0-1:0]: "$return"
Box
  kind:   Constructor
  detail: fn(Int, Int, Float) -> Box
  sort:   2_Box
  desc:   app
  edits:
    [1:0-1:0]: "Box"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
